fixed image slideshow flickering

--- a/assets/styles/animation.css
+++ b/assets/styles/animation.css
@@ -4,13 +4,13 @@
   z-index: 2;
   width: 100%;
   height: 100%;
-  backdrop-filter: blur(3px);         /* apply the blur */
-  pointer-events: none; /* make the pseudo class click-through */
+  backdrop-filter: blur(3px);
+  pointer-events: none;
 }
 
 .bg-map {
-    animation: map 30s ease infinite 3s;
-    background-image: url('../images/map1.webp');
+    animation: map 10s ease infinite 3s;
+    background-image: url('../images/map1.webp'), url('../images/map2.webp');
 }
 
 @keyframes map {
